fix(visualization-title): Changed title alignment from center to left for chart and table

--- a/src/app/dashboard/modules/ngx-dhis2-visualization/modules/ngx-dhis2-table/components/table-item/table-item.component.css
+++ b/src/app/dashboard/modules/ngx-dhis2-visualization/modules/ngx-dhis2-table/components/table-item/table-item.component.css
@@ -36,7 +36,6 @@
 }
 
 .table-item-title {
-  text-align: center;
   font-size: 16px;
   font-weight: 500;
   margin-bottom: 7px;
